--- a/search_page.html
+++ b/search_page.html
@@ -49,19 +49,21 @@
                 <li><a href="#">Pakistan</a></li>
             </ul>
 
-            <ul class="l-footer"> 
-                <li><a href="#">Advertising</a></li> 
-                <li><a href="#">Business</a></li> 
-                <li><a href="#">About</a></li> 
-                <li><a href="#">How Search works</a></li> 
-            </ul>
-
-            <ul class="r-footer"> 
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Settings</a></li>
-            </ul>
-   
+            <div class="bottom-footer">
+                <ul class="l-footer"> 
+                    <li><a href="#">Advertising</a></li> 
+                    <li><a href="#">Business</a></li> 
+                    <li><a href="#">About</a></li> 
+                    <li><a href="#">How Search works</a></li> 
+                </ul>
+    
+                <ul class="r-footer"> 
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Settings</a></li>
+                </ul>
+            </div>
+            
         </footer>
   
     </body>
