Advance page is partially implemented

--- a/search_page.html
+++ b/search_page.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a id="search-link" href="image_search.html">Google Image Search</a></li>
-                <li><a id="advance-search-link" href="#">Google Advanced Search</a></li>
+                <li><a id="advance-search-link" href="advance_search.html">Google Advanced Search</a></li>
             </ul>
         </nav>    
         
