--- a/image_search.html
+++ b/image_search.html
@@ -8,7 +8,7 @@
         <meta http-equiv="x-UA-compatible" content="ie-edge">
         <link rel="stylesheet" href="image_search.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <title>Search</title>
+        <title>Google Image Search</title>
     </head>
 
     <body>
