Final retoucing complete

--- a/advance_search.html
+++ b/advance_search.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scale-1.0">
         <meta http-equiv="x-UA-compatible" content="ie-edge">
-        <link rel="stylesheet" href="advance_search.html">
+        <link rel="stylesheet" href="advance_search.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <title>Google Advance Search</title>
     </head>
@@ -18,7 +18,7 @@
             </ul>
 
             <ul class="nav-links">
-                <li><a id="google-search" href="search_page.html">Google Search</a></li>
+                <li><a id="google-search" href="index.html">Google Search</a></li>
                 <li><a id="image-search" href="image_search.html">Google Image Search</a></li>
             </ul>
             
