--- a/image_search.html
+++ b/image_search.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a id="advance-search-link" href="advance_search.html">Google Advanced Search</a></li>
-                <li><a id="search-link" href="search_page.html">Google Search</a></li>
+                <li><a id="search-link" href="index.html">Google Search</a></li>
                 
             </ul>
         </nav>    
